Tabs and user selection functionality working

--- a/force-app/main/default/classes/MessengerUtils.cls
+++ b/force-app/main/default/classes/MessengerUtils.cls
@@ -1,15 +1,15 @@
 public with sharing class MessengerUtils {
     @AuraEnabled(cacheable=true)
-    public static List<Contact> findUsers(String searchKey) {
+    public static List<User> findUsers(String searchKey) {
         String key = '%' + searchKey + '%';
         system.debug([SELECT Id, Name, Title FROM User WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50]);
-        return [SELECT Id, Name, Title FROM Contact WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 500];
+        return [SELECT Id, Name, Title, FullPhotoUrl FROM User WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 500];
     }
 
     @AuraEnabled(cacheable=true)
-    public static List<Group> findGroups(String searchKey) {
+    public static List<Contact> findGroups(String searchKey) {
         String key = '%' + searchKey + '%';
         system.debug([SELECT Id, Name FROM Group WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50]);
-        return [SELECT Id, Name FROM Group WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50];
+        return [SELECT Id, Name FROM Contact WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50];
     }
 }
