--- a/force-app/main/default/classes/MessengerUtils.cls
+++ b/force-app/main/default/classes/MessengerUtils.cls
@@ -7,9 +7,9 @@ public with sharing class MessengerUtils {
     }
 
     @AuraEnabled(cacheable=true)
-    public static List<Contact> findGroups(String searchKey) {
+    public static List<Group> findGroups(String searchKey) {
         String key = '%' + searchKey + '%';
         system.debug([SELECT Id, Name FROM Group WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50]);
-        return [SELECT Id, Name FROM Contact WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50];
+        return [SELECT Id, Name FROM Group WHERE Name LIKE :key WITH SECURITY_ENFORCED LIMIT 50];
     }
 }
