--- a/force-app/main/default/classes/SendMessageHandler.cls
+++ b/force-app/main/default/classes/SendMessageHandler.cls
@@ -1,6 +1,7 @@
 public without sharing class SendMessageHandler {
     @AuraEnabled
-    public static string sendMessage(String message, String thread, String recipientId, String senderId){ 
+    public static string sendMessage(String message, String thread, String recipientId, String senderId, String name){ 
+        system.debug(name);
         MHolt__Chat_Message_Code__mdt cryptoKeyAsString = [SELECT id, MHolt__Key__c FROM MHolt__Chat_Message_Code__mdt WHERE MasterLabel='Key'][0];
         Blob cryptoKey = EncodingUtil.base64decode(cryptoKeyAsString.MHolt__Key__c);
         Blob encryptedData = Crypto.encryptWithManagedIV('AES256', cryptoKey, Blob.valueOf(message));
@@ -21,13 +22,16 @@ public without sharing class SendMessageHandler {
         msg.MHolt__Conversation__c += encryptedMsg;
         Database.UpsertResult result = database.upsert(msg);
         if(result.isSuccess()){
-            publishEvent(recipientId, senderId, encryptedMsg);
+            publishEvent(recipientId, senderId, name, encryptedMsg);
         }
         return null;
     }
 
-    public static void publishEvent(string recip, String sdr, String msg){
-        MHolt__Message__e evt = new MHolt__Message__e(MHolt__Content__c = msg, MHolt__From_User__c = sdr, MHolt__To_User__c = recip);
+    public static void publishEvent(string recip, String sdr, String nm, String msg){
+        String timeStamp = getTimeStamp();
+
+        MHolt__Message__e evt = new MHolt__Message__e(MHolt__Content__c = msg, MHolt__From_User__c = sdr, MHolt__To_User__c = recip, MHolt__Timestamp__c = timeStamp, MHolt__From_Name__c = nm);
+        system.debug(evt);
         Database.SaveResult result = EventBus.publish(evt);
         /*// Inspect publishing result for each event
         for (Database.SaveResult sr : results) {
@@ -42,6 +46,49 @@ public without sharing class SendMessageHandler {
                 }
             }       
         }*/
+    }
+
+    @AuraEnabled
+    public static String getTimeStamp(){
+        DateTime dt = system.NOW();
+        Integer day = dt.dayGmt();
+        String mth = getMonthWritten(dt.monthGmt());
+        Integer year = dt.yearGmt();
+        Integer hour = dt.hourGmt();
+        Integer min = dt.minuteGmt();
+        Integer sec = dt.secondGmt();
+
+        return day + ' ' + mth + ' ' + String.valueOf(year).mid(2,2) + ' ' + hour + ':' + min + ':' + sec; 
+        }
+
+    public static String getMonthWritten(integer mth){
+        switch on mth {
+            when 1 {
+                return 'Jan';
+            }when 2 {		
+                return 'Feb';
+            }when 3 {
+                return 'Mar';
+            }when 4 {		  
+                return 'Apr';
+            }when 5{
+                return 'May';
+            }when 6{
+                return 'Jun';
+            }when 7{
+                return 'Jul';
+            }when 8{
+                return 'Aug';
+            }when 9{
+                return 'Sep';
+            }when 10{
+                return 'Oct';
+            }when 11{
+                return 'Nov';
+            }when else{
+                return 'Dec';
+            }
+        }
     }
 
     @AuraEnabled
