Issue: BLOB is not a valid UTF-8 string

--- a/force-app/main/default/classes/SendMessageHandler.cls
+++ b/force-app/main/default/classes/SendMessageHandler.cls
@@ -29,9 +29,7 @@ public without sharing class SendMessageHandler {
 
     public static void publishEvent(string recip, String sdr, String nm, String msg){
         String timeStamp = getTimeStamp();
-
         MHolt__Message__e evt = new MHolt__Message__e(MHolt__Content__c = msg, MHolt__From_User__c = sdr, MHolt__To_User__c = recip, MHolt__Timestamp__c = timeStamp, MHolt__From_Name__c = nm);
-        system.debug(evt);
         Database.SaveResult result = EventBus.publish(evt);
         /*// Inspect publishing result for each event
         for (Database.SaveResult sr : results) {
@@ -46,6 +44,54 @@ public without sharing class SendMessageHandler {
                 }
             }       
         }*/
+    }
+
+    /*@AuraEnabled
+    public static String getChatHistory(String user1, String user2, integer days){
+        system.debug('user1: ' + user1);
+        system.debug('user2: ' + user2);
+        system.debug('days: ' + days);
+        days = 7;
+        user1 = '%' + user1 + '%';
+        user2 = '%' + user2 + '%';
+        List<String> conversations = new List<String>();
+        List<MHolt__Chat_Message__c> chats = [SELECT name, MHolt__Conversation__c, MHolt__Participants__c 
+                                                FROM MHolt__Chat_Message__c 
+                                                WHERE MHolt__Participants__c like :user1
+                                                AND MHolt__Participants__c like :user2
+                                                AND createdDate = LAST_N_DAYS:7];
+        MHolt__Chat_Message_Code__mdt cryptoKeyAsString = [SELECT id, MHolt__Key__c FROM MHolt__Chat_Message_Code__mdt WHERE MasterLabel='Key'][0];
+        Blob cryptoKey = EncodingUtil.base64decode(cryptoKeyAsString.MHolt__Key__c);
+        system.debug(chats);
+        Blob decryptedData;
+        for(MHolt__Chat_Message__c chat : chats){
+            Blob base64EncryptedMessage = EncodingUtil.base64decode(chat.MHolt__Conversation__c);
+            decryptedData = Crypto.decryptWithManagedIV('AES256', cryptoKey, base64EncryptedMessage);
+        }
+        return decryptedData.toString();
+    }*/
+
+    @AuraEnabled
+    public static String getChatHistory(String user1, String user2, integer days){
+        user1 = '%' + user1 + '%';
+        user2 = '%' + user2 + '%';
+        List<MHolt__Chat_Message__c> chats = new List<MHolt__Chat_Message__c>();
+        try{
+            chats = [SELECT name, MHolt__Conversation__c, MHolt__Participants__c 
+                                                FROM MHolt__Chat_Message__c 
+                                                WHERE MHolt__Participants__c like :user1
+                                                AND MHolt__Participants__c like :user2
+                                                AND createdDate = LAST_N_DAYS:7];
+        }catch(ListException e){
+
+        }
+        MHolt__Chat_Message_Code__mdt cryptoKeyAsString = [SELECT id, MHolt__Key__c FROM MHolt__Chat_Message_Code__mdt WHERE MasterLabel='Key'][0];
+        Blob cryptoKey = EncodingUtil.base64decode(cryptoKeyAsString.MHolt__Key__c);
+        Blob base64EncryptedMessage = EncodingUtil.base64decode(chats[0].MHolt__Conversation__c);
+        Blob decryptedData = Crypto.decryptWithManagedIV('AES256', cryptoKey, base64EncryptedMessage);
+        return decryptedData.toString();
+        //return encodingUtil.base64encode(decryptedData);
+
     }
 
     @AuraEnabled
@@ -93,11 +139,19 @@ public without sharing class SendMessageHandler {
 
     @AuraEnabled
     public static String decryptMessage(String msg, String snd){
-        User sender = [SELECT Id, Name FROM User WHERE id =: snd][0];
+        String nm = '';
+        try{
+            User sender = [SELECT Id, Name FROM User WHERE id =: snd][0];
+            nm = sender.Name;
+            system.debug(sender);
+        }catch(ListException e){
+            //No sender param
+        }
         MHolt__Chat_Message_Code__mdt cryptoKeyAsString = [SELECT id, MHolt__Key__c FROM MHolt__Chat_Message_Code__mdt WHERE MasterLabel='Key'][0];
         Blob cryptoKey = EncodingUtil.base64decode(cryptoKeyAsString.MHolt__Key__c);
         Blob base64EncryptedMessage = EncodingUtil.base64decode(msg);
         Blob decryptedData = Crypto.decryptWithManagedIV('AES256', cryptoKey, base64EncryptedMessage);
-        return sender.name + ': ' + decryptedData.toString();
+        return nm + ':' + decryptedData.toString();
     }
+
 }
